kind/manifests/traefik/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kvasir
  namespace: kvasir
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kvasir.localhost`)
      kind: Rule
      services:
        - name: kvasir
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.localhost`)
      kind: Rule
      services:
        - name: keycloak
          port: 8280
